<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QRatitude</string>

	<string name="title_activity_authentication">AuthenticationActivity</string>
	<string name="text_authentication_title">Authentication</string>
	<string name="edit_username">Username</string>
	<string name="edit_password">Password</string>
	<string name="button_authenticate">Authenticate</string>

	<string name="title_activity_scan">ScanActivity</string>
	<string name="button_scan">Scan a QR Code</string>
	<string name="button_settings">Settings</string>

	<string name="title_activity_product_data_entry">ProductDataEntryActivity</string>
	<string name="text_category">Select a category:</string>
	<string name="edit_title">Item Name</string>
	<string name="edit_description">Description</string>
	<string name="edit_size">Item dimensions</string>
	<string name="edit_quantity">Number of items</string>
	<string name="edit_condition">Condition</string>
	<string name="edit_color">Color</string>
	<string name="text_gallery">Gallery</string>
	<string name="button_snap">Snap a Picture</string>
	<string name="button_upload">Upload Asset Data</string>

	<string name="title_activity_upload">UploadActivity</string>
	<string name="text_upload_status">Upload Status</string>

	<string name="destination_directory">org.freesideatlanta.qratitude.Assets</string>

	<string name="failed_authentication">Failed to authenticate.</string>
	<string name="unable_to_create_files">Unable to store pictures.  Check SD Card is present and mounted.</string>
	<string name="external_media_unmounted">External Media (SD Card) is not present or unmounted</string>
	<string name="failed_to_create_directory">Failed to create the destination directory for asset pictures</string>
	<string name="photo_result_failed">Failed to take photo</string>
	<string name="unknown_media_type">Unknown media type file requested</string>
	<string name="user_canceled_photo">User canceled taking a photo</string>
</resources>
