<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/layout_category_header"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/textview_category"
			android:layout_weight="1"
			android:layout_width="0dp" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/header_text_margin_left"
			android:textSize="@dimen/header_font_size"
			android:text="@string/text_category" />
		<Spinner android:id="@+id/spinner_category" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	<EditText android:id="@+id/edit_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:hint="@string/edit_title" />
	<EditText android:id="@+id/edit_description"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/edit_description" />
	<EditText android:id="@+id/edit_size"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/edit_size" />
	<EditText android:id="@+id/edit_quantity"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/edit_quantity" />
	<EditText android:id="@+id/edit_condition"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/edit_condition" />
	<EditText android:id="@+id/edit_color"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/edit_color" />
	<LinearLayout android:id="@+id/layout_gallery_header"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:id="@+id/textview_gallery"
			android:layout_weight="1"
			android:layout_width="0dp" 
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/header_text_margin_left"
			android:textSize="@dimen/header_font_size"
			android:text="@string/text_gallery" />
		<Button android:id="@+id/button_snap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_snap" 
			android:onClick="snapPicture" />
	</LinearLayout>
	<HorizontalScrollView android:id="@+id/view_gallery"
		android:layout_width="match_parent"
		android:layout_height="@dimen/photo_frame_height">
		<LinearLayout android:id="@+id/layout_gallery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" />
	</HorizontalScrollView>
	<LinearLayout android:id="@+id/layout_actions"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/button_upload"
			android:layout_weight="1"
			android:layout_width="0dp" 
			android:layout_height="wrap_content"
			android:text="@string/button_upload" 
			android:onClick="uploadAsset" />
		<Button android:id="@+id/button_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_settings"
			android:onClick="editSettings" />
	</LinearLayout>
</LinearLayout>

