<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:id="@+id/textview_authentication_title"
		android:layout_weight="1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/header_text_margin_left"
		android:textSize="@dimen/header_font_size"
		android:text="@string/text_authentication_title" />
	<EditText android:id="@+id/edit_username"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:hint="@string/edit_username" />
	<EditText android:id="@+id/edit_password"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/edit_password" />
</LinearLayout>
